--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.42",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
