--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@clerk/express": "^1.3.42",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@upstash/redis": "^1.34.4",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
